[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Main_Menu/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://Graphic/Background.png" type="Texture" id=2]
[ext_resource path="res://Font/font_dynamic_menu.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sounds/sound_ui_accept.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/click.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/a-menu.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=2]

length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/Menu/Play:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Main_Menu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Material" ]

[node name="Background" type="Sprite" parent="." index="0"]

position = Vector2( 300, 400 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="MarginContainer" type="MarginContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_left = 40
_sections_unfolded = [ "custom_constants" ]

[node name="Menu" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 312.0
margin_right = 600.0
margin_bottom = 487.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="Play" type="Label" parent="MarginContainer/Menu" index="0" groups=[
"menu",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 560.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Play"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility", "custom_fonts" ]

[node name="How_to_play" type="Label" parent="MarginContainer/Menu" index="1" groups=[
"menu",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 65.0
margin_right = 560.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "How to play"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Exit" type="Label" parent="MarginContainer/Menu" index="2" groups=[
"menu",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 130.0
margin_right = 560.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Exit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Scroling = SubResource( 1 )
anims/Ui_accept_play = SubResource( 2 )
blend_times = [  ]

[node name="Sound_ui_accept" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="GameStartDelay" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="Click" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="A_Background" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="timeout" from="GameStartDelay" to="." method="_on_GameStartDelay_timeout"]


